--- a/scss/layout/_body.scss
+++ b/scss/layout/_body.scss
@@ -9,6 +9,10 @@
     font-weight: 300;
 }
 
+main{
+    min-width: 375px;
+}
+
 .container{
     max-width: 1500px;
 }
@@ -23,6 +27,5 @@
 @import "body/projects";
 @import "../components/quad-images";
 @import "../components/particles";
-@import "body/about";
 @import "body/hero";
 @import "body/header";
