--- a/scss/layout/body/_references.scss
+++ b/scss/layout/body/_references.scss
@@ -50,5 +50,6 @@
 
     &__review{
         margin-top: 24px;
+        overflow-y: scroll;
     }
 }
